--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-prettier": "^0.0.0-empty",
     "lefthook": "^1.4.9",
     "prettier": "^3.0.2"
   },
